# ComfyUI

./: .gitignore  README.md  pyproject.toml  requirements.txt  run-comfyui.sh  server.py  sync-uv.sh  upgrade-from-upstream.sh
.fork/: README.md  check-custom-node-imports.py  check-opencv.py  check-runtime-layout.sh  check-upstream-deps.sh  custom_nodes.tsv  install-runtime-entrypoints.sh  migrate-runtime-layout.sh  reconcile-runtime-state.sh  run-comfyui.sh  sync-custom-node-requirements.py  sync-upstream-requirements.py  sync-uv.sh  upgrade-from-upstream.sh
alembic_db/versions/: 0003_add_metadata_job_id.py
app/assets/api/: routes.py  schemas_out.py
app/assets/database/: models.py
comfy/: quant_ops.py
comfy/isolation/: model_patcher_proxy.py  model_patcher_proxy_registry.py  model_patcher_proxy_utils.py  model_sampling_proxy.py
comfy_api_sealed_worker/: trimesh_types.py
comfy_execution/: cache_provider.py
comfy_extras/: nodes_multigpu.py
