[project]
name = "ComfyUI"
version = "0.18.2"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.11.8",
  "alembic>=1.16.5",
  "av>=14.2.0",
  "comfyui-embedded-docs==0.3.1",
  "comfyui-frontend-package==1.28.8",
  "comfyui-workflow-templates==0.2.11",
  "cupy-cuda13x>=13.6.0",
  "einops>=0.8.1",
  "kornia>=0.7.1",
  "numpy>=1.25.0",
  "opencv-contrib-python>=4.11.0.86",
  "pillow>=11.3.0",
  "psutil>=7.1.0",
  "pydantic~=2.0",
  "pydantic-settings~=2.0",
  "pyyaml>=6.0.2",
  "safetensors>=0.4.2",
  "sageattention>=2.2.0",
  "scipy>=1.16.2",
  "sentencepiece>=0.2.1",
  "soundfile>=0.13.1",
  "spandrel>=0.4.1",
  "sqlalchemy>=2.0.43",
  "tokenizers>=0.13.3",
  "torch>=2.8.0",
  "torchaudio>=2.8.0",
  "torchsde>=0.2.6",
  "torchvision>=0.23.0",
  "tqdm>=4.67.1",
  "transformers>=4.37.2",
  "uv>=0.8.19",
  "yarl>=1.18.0",
]


[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
torchaudio = [{ index = "pytorch-cu129" }]
sageattention = [
  { url = "https://files.pythonhosted.org/packages/01/7c/448c9bf634c10ef9dcb49e259e29d90c34f2f85a5a341367ac85f7ed5ca8/sageattention-2.2.0.tar.gz" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.extra-build-dependencies]
sageattention = ["torch"]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.35.0",
    "ipykernel>=6.30.1",
]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]
