[project]
name = "ComfyUI"
version = "0.18.5"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  # BEGIN upstream-managed core dependencies
  "comfyui-frontend-package==1.41.21",
  "comfyui-workflow-templates==0.9.43",
  "comfyui-embedded-docs==0.4.3",
  "torch",
  "torchsde",
  "torchvision",
  "torchaudio",
  "numpy>=1.25.0",
  "einops",
  "transformers>=4.50.3",
  "tokenizers>=0.13.3",
  "sentencepiece",
  "safetensors>=0.4.2",
  "aiohttp>=3.11.8",
  "yarl>=1.18.0",
  "pyyaml",
  "Pillow",
  "scipy",
  "tqdm",
  "psutil",
  "alembic",
  "SQLAlchemy",
  "filelock",
  "av>=14.2.0",
  "comfy-kitchen>=0.2.8",
  "comfy-aimdo>=0.2.12",
  "requests",
  "simpleeval>=1.0.0",
  "blake3",
  "kornia>=0.7.1",
  "spandrel",
  "pydantic~=2.0",
  "pydantic-settings~=2.0",
  "PyOpenGL",
  "glfw",
  # END upstream-managed core dependencies
  # BEGIN fork-managed core dependencies
  "cupy-cuda13x>=13.6.0",
  "opencv-contrib-python>=4.11.0.86",
  "sageattention>=2.2.0",
  "soundfile>=0.13.1",
  "uv>=0.8.19",
  # END fork-managed core dependencies
]


[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
torchaudio = [{ index = "pytorch-cu129" }]
sageattention = [
  { url = "https://files.pythonhosted.org/packages/01/7c/448c9bf634c10ef9dcb49e259e29d90c34f2f85a5a341367ac85f7ed5ca8/sageattention-2.2.0.tar.gz" },
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.extra-build-dependencies]
sageattention = ["torch"]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "E",
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]

lint.ignore = ["E501", "E722", "E731", "E712", "E402", "E741"]

exclude = ["*.ipynb", "**/generated/*.pyi"]

[dependency-groups]
custom_nodes = [
    # BEGIN custom-nodes-managed dependency group
    "black",
    "chardet<6",
    "color-matcher",
    "dill",
    "gguf>=0.13.0",
    "GitPython",
    "huggingface-hub",
    "imageio-ffmpeg",
    "matplotlib",
    "matrix-nio",
    "mss",
    "piexif",
    "PyGithub",
    "rich",
    "scikit-image",
    "segment-anything",
    "toml",
    "typer",
    "typing-extensions",
    "ultralytics>=8.3.162",
    # END custom-nodes-managed dependency group
]
dev = [
    "huggingface-hub[cli]>=0.35.0",
    "ipykernel>=6.30.1",
]

[tool.pylint]
master.py-version = "3.10"
master.extension-pkg-allow-list = [
  "pydantic",
]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "line-too-long",
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-instance-attributes",
  "too-many-positional-arguments",
  "broad-exception-raised",
  "too-many-lines",
  "invalid-name",
  "unused-argument",
  "broad-exception-caught",
  "consider-using-with",
  "fixme",
  "too-many-statements",
  "too-many-branches",
  "too-many-locals",
  "too-many-arguments",
  "too-many-return-statements",
  "too-many-nested-blocks",
  "duplicate-code",
  "abstract-method",
  "superfluous-parens",
  "arguments-differ",
  "redefined-builtin",
  "unnecessary-lambda",
  "dangerous-default-value",
  "invalid-overridden-method",
  # next warnings should be fixed in future
  "bad-classmethod-argument",  # Class method should have 'cls' as first argument
  "wrong-import-order",  # Standard imports should be placed before third party imports
  "ungrouped-imports",
  "unnecessary-pass",
  "unnecessary-lambda-assignment",
  "no-else-return",
  "unused-variable",
]
